<resources>
    <string name="app_name">CommunalTouristSystem</string>
    <string name="title_activity_maps">Map</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation drawer items names-->
    <string name="informations">Informacje</string>
    <string name="terrain_map">Mapa terenu</string>
    <string name="satelite_map">Mapa satelita</string>
    <string name="show_current_pos">Pokaż aktualną pozycję</string>
    <string name="way_trace">Sledź trasę</string>
    <string name="stop_way_trace">Zatrzymaj śledzenie trasy</string>
    <string name="capture_photo">Zrób zdjęcie</string>
    <string name="settings">Ustawienia</string>
    <string name="load_conf_file">Wczytaj plik konfiguracyjny</string>
    <string name="ways_list">Pokaż listę tras</string>
    <string name="places_list">Pokaż listę miejsc</string>

    <string name="others">Inne</string>
    <string name="configuration">Konfiguracja</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_label_string">Nazwa trasy: </string>
    <string name="way_length_label_string">Długość trasy</string>
    <string name="show_way_on_map">Pokaż trasę na mapie</string>
    <string name="place_title_label_string">Nazwa miejsca</string>
    <string name="show_place_on_map">Pokaż miejsce na mapie</string>
    <string name="commune_name_label_string">Nazwa gminy</string>
    <string name="commune_major_label_string">Burmistrz</string>
    <string name="commune_history_label_string">Historia</string>
    <string name="commune_placement_label_string">Położenie</string>
    <string name="commune_others_label_string">Inne</string>
    <string name="commune_places_label_string">Miejscowości należące do gminy</string>
    <string name="NoGpsTitle">Gps nie jest włączony</string>
    <string name="NoGpsMsg">Czy chcesz włączyć gps?</string>
    <string name="ok">Tak</string>
    <string name="cancel">Nie</string>
</resources>
