<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:title="@string/informations"/>
        <item
            android:id="@+id/nav_terrain_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/terrain_map"/>
        <item
            android:id="@+id/nav_satelite_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/satelite_map"/>
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_way_trace"
                android:title="@string/way_trace"/>

            <item
                android:id="@+id/nav_ways_list"
                android:title="@string/ways_list"/>

            <item
                android:id="@+id/nav_places_list"
                android:title="@string/places_list"/>

            <item
                android:id="@+id/nav_stop_way_trace"
                android:title="@string/stop_way_trace"/>

            <item
                android:id="@+id/nav_capture_photo"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/capture_photo"/>
        </menu>
    </item>

    <item android:title="@string/configuration">
        <menu>
        <item
            android:id="@+id/nav_load_conf_file"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/load_conf_file"/>
        </menu>
    </item>

</menu>